Correct font for Git

--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -95,7 +95,7 @@ Other branches are to be thought of as work areas, where developers fix bugs or 
 The modifications made in these development branches will then be transferred (directly or indirectly) to the main branch. 
 This principle is shown in Figure \@ref(fig:12-secure-1).
 
-(ref:gitbranchcap) Branches in Git.
+(ref:gitbranchcap) Branches in `Git`.
 
 ```{r 12-secure-1, echo=FALSE, fig.cap="(ref:gitbranchcap)", out.width='100%'}
 knitr::include_graphics("img/Git_branches_fork.png")
@@ -114,11 +114,11 @@ Issue may also be used as a discussion medium with beta testers, clients or spon
 One other valuable feature of issues is that they can be referenced inside commits using a hashtag and its number: `#123`.
 In other words, when you send code to the centralized server, you can link this code to one or more issues and corresponding commits appear in the issue discussions.
 
-## Git integration
+## `Git` integration
 
 ### With RStudio
 
-Git is very well integrated in the RStudio IDE, and using `Git` can be as simple as clicking on a button from time to time.
+`Git` is very well integrated in the RStudio IDE, and using `Git` can be as simple as clicking on a button from time to time.
 If you are using RStudio, you will find a pull/push button, a stage and commit interface, and a tool for visualizing differences in files.
 Everything you need to get started is there.
 
@@ -133,7 +133,7 @@ And of course, remember that `Git` is not limited to `{shiny}` applications: it 
 
 ### About `git-flow`
 
-There are a lot of different ways and methodologies to organize your Git workflow.
+There are a lot of different ways and methodologies to organize your `Git` workflow.
 One of the most popular ones is called `git flow`, and we will give you here a quick introduction on how you can manage your work using this approach.
 Please note that this is a quick introduction, not a complete guide: we will link to some further reading just at the end of this section.
 
