--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -389,7 +389,7 @@ Most of the applications that are used as examples in this book have been built 
 This requires using extra arguments to generate the UI and server.
 As the UI and server are functions, you can set parameters that will be used to configure the internals of the result.
 
-As you can see, the **app\_ui** contains a series of calls to thz
+As you can see, the **app\_ui** contains a series of calls to the
  `mod_ui(unique_id, ...)` function, allowing additional arguments like any other function:
 
 ```{r 03-structure-5, eval=FALSE}
