Typos, capitalisation and hyphens

--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -231,7 +231,7 @@ Just as with their server counterparts, the UI side of these elements are the on
 By default, `{golem}` uses a `fluidPage()`, which is the most commonly used `{shiny}` [@R-shiny] template.
 If ever you want to use `navBarPage()`, this is where you will define it: replace one with the other, and you will be good to go.
 You can also define any other template page, for example with an `htmlTemplate()`.
-For an example of an application built using an `htmlTemplate`, please visit [engineering-shiny.org/graysacle/](https://engineering-shiny.org/graysacle/), or [engineering-shiny.org/golemhtmltemplate/](https://engineering-shiny.org/golemhtmltemplate/): both these applications are built on top of an external html template.
+For an example of an application built using an `htmlTemplate`, please visit [engineering-shiny.org/grayscale/](https://engineering-shiny.org/grayscale/), or [engineering-shiny.org/golemhtmltemplate/](https://engineering-shiny.org/golemhtmltemplate/): both these applications are built on top of an external html template.
 
 If you're tempted to do that, be aware that `fluidPage()` comes with a series of CSS/JS elements, and if you plan on not using a default `{shiny}` `*Page()` function, you will need to add your own CSS.
 
