--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -748,7 +748,7 @@ with_palette( tritan_jet_color )
 
 See Figure \@ref(fig:06-ux-matters-23).
 
-(ref:viridistritan) View of `viridis` palette for a Tritanopian.
+(ref:viridistritan) View of `viridis` palette for a tritanopian.
 
 ```{r 06-ux-matters-24, fig.cap="(ref:viridistritan)", out.width="100%"}
 tritan_viridis <- function(n){
@@ -789,7 +789,7 @@ knitr::include_graphics("img/deuto.png")
 #### B. External tools {.unnumbered}
 
 There are several tools on the web that can evaluate the accessibility of your web page.
-You can also use a Google Chrome built-in tool called `LightHouse` (we will come back to it in the Testing chapter).
+You can also use a Google Chrome built-in tool called `Lighthouse` (we will come back to it in the Testing chapter).
 
 -   [IBM Equal Access Toolkit](https://github.com/IBMa/equal-access) is an open source tool to monitor the accessibility of a web application and comes with Google Chrome and Firefox Extensions.
 
