--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -981,7 +981,7 @@ For more extensive coverage of using databases in R, please follow these resourc
 
 -   [CRAN Task View: Databases with R](https://cran.r-project.org/web/views/Databases.html): the official task view from CRAN with a series of packages for database manipulation
 
-### Data source checklist
+### Data-source checklist
 
 How to choose between these three methodologies:
 
