--- a/18-css.Rmd
+++ b/18-css.Rmd
@@ -1,6 +1,6 @@
 # A Gentle Introduction to CSS {#css}
 
-## What is CSS
+## What is CSS?
 
 ### About CSS
 
@@ -42,7 +42,7 @@ As you can see, if you have created a `fluidPage()` before, there is already sty
 
 Compare:
 
-+ No `fluidPage`, Figure \@ref(fig:18-css-5)
+-   No `fluidPage`, Figure \@ref(fig:18-css-5)
 
 ```{r 18-css-4, eval = FALSE}
 library(shiny)
@@ -72,7 +72,7 @@ shinyApp(ui, server)
 knitr::include_graphics("img/no-css-shiny.png")
 ```
 
-+ With `fluidPage`, Figure \@ref(fig:18-css-7)
+-   With `fluidPage`, Figure \@ref(fig:18-css-7)
 
 ```{r 18-css-6, eval = FALSE}
 library(shiny)
