--- a/manualpackages.bib
+++ b/manualpackages.bib
@@ -4,5 +4,5 @@
     year = {2020},
     url = {http://www.bioconductor.org/packages/spatialLIBD},
     note = {https://github.com/LieberInstitute/spatialLIBD - R package version 0.99.15},
-    doi = {10.18129/B9.bioc.spatialLIBD},
+    doi = {10.1101/2021.04.29.440149},
 }
