--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -3,8 +3,8 @@
 ## Working with a "long-term" mindset
 
 > Rome ne fut pas faite toute en un jour.
-> 
-> _French proverb_
+>
+> *French proverb*
 
 ### Prepare for success
 
@@ -13,7 +13,8 @@ Whatever your ambitions for your `{shiny}` application, you should take time tod
 A common thing you will hear about `{shiny}` is that it is a good prototyping tool.
 This cannot be denied.
 Building a Proof of Concept (PoC) for an app is relatively straightforward if you compare to what is needed to build applications in other languages.
-With `{shiny}`, you can build an "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors. Thanks to the way `{shiny}` was designed, you do not have to care about websockets, ports, HTML (HyperText Markup Language), JavaScript libraries, and all the things that are elegantly bundled into `{shiny}`.
+With `{shiny}`, you can build an "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors.
+Thanks to the way `{shiny}` was designed, you do not have to care about websockets, ports, HTML (HyperText Markup Language), JavaScript libraries, and all the things that are elegantly bundled into `{shiny}`.
 
 Hence, you can have a quick, hacky application that will work on your machine, and very rapidly.
 But that is not the way you should start.
@@ -30,15 +31,14 @@ The larger the codebase, the harder it is to untangle everything and make it wor
 In this book, we will present a framework called `{golem}`, which is a toolbox for building production-grade `{shiny}` applications.
 Even if `{golem}` is focused on production, there is no reason not to use it for your proof of concepts: starting a new `{golem}` project is relatively straightforward, and even if you do not use the advanced features, you can use it for very small apps.
 The benefit of starting straight inside a `{golem}` application really outweighs the cost.
-We hear a lot the question "When should I switch to `{golem}`?" 
-The answer is simple: do not switch to `{golem}`, start with it.
+We hear a lot the question "When should I switch to `{golem}`?" The answer is simple: do not switch to `{golem}`, start with it.
 That way, you are getting ready for complexity, and if, one day, you need to turn this small app into a production app, the foundations are there.
 
 ### Develop with the KISS principle
 
 > The KISS principle states that most systems work best if they are kept simple rather than made complicated; therefore, simplicity should be a key goal in design, and unnecessary complexity should be avoided.\
-> 
-> _KISS principle, Wikipedia article_ (<https://en.wikipedia.org/wiki/KISS_principle>)
+>
+> *KISS principle, Wikipedia article* (<https://en.wikipedia.org/wiki/KISS_principle>)
 
 The KISS principle, as "Keep It Simple, Stupid", should drive the implementation of features in the application to allow anyone in the future, including original developers, to take over on the development.
 
@@ -73,7 +73,7 @@ Adding code that breaks the codebase will happen with complex apps, so the soone
 As you cannot prevent code from breaking, you should at least get the tooling to:
 
 -   **Be informed that the codebase is broken**: this is the role of tests combined with CI.
--  **Be able to identify changes between versions, and potentially, get back in time to a previous codebase**: this is the role of version control.
+-   **Be able to identify changes between versions, and potentially, get back in time to a previous codebase**: this is the role of version control.
 
 We will go deeper into testing and version control in [chapter 14](#build-yourself-safety-net).
 
@@ -103,7 +103,7 @@ We will get back to `{shiny}` modules and how to organize your project in the ne
 
 ### From the team point of view
 
-We recommend that  you define two kinds of developers: a unique person (or maybe two) to be in charge of supervising the whole project and developers that will work on specific features.
+We recommend that you define two kinds of developers: a unique person (or maybe two) to be in charge of supervising the whole project and developers that will work on specific features.
 Note that this is how a project should be organized in a perfect world: in practice, a lot of `{shiny}` projects are managed by one developer who is in charge of managing the project, interacting with the client, and building the whole codebase.
 
 #### A. A person in charge {.unnumbered}
