--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -836,7 +836,7 @@ library(shiny)
 library(dplyr)
 
 # Writing all the business logic for the table manipulation 
-# inside another function, outside the 
+# inside an external function
 top_this <- function(tbl, n) {
   tbl %>%
     # [...] %>% 
