--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -547,6 +547,7 @@ To do this, we can use the `tagAppendAttributes()` function from `{shiny}`, whic
 
 ```{r 06-ux-matters-13, eval = FALSE}
 library(shiny)
+library(magrittr)
 ui <- function(){
   # Generating a UI with one plot
   tagList(
@@ -679,7 +680,6 @@ But let's now use the `{dichromat}` [@R-dichromat] package to simulate color bli
 
 ```{r 06-ux-matters-18 }
 library(dichromat)
-library(purrr, warn.conflicts = FALSE)
 ```
 
 -   Simulation of deuteranopia with `jet.colors` and `viridis`
@@ -804,5 +804,5 @@ The result of a test on the `{hexmake}` application can be seen on Figure \@ref(
 knitr::include_graphics("img/hexmakeaccessibility.png")
 ```
 
-Note that you can also add a Chrome or Firefox extension for <www.webaccessibility.com>, making it more straightforward to run your accessibility tests.
+Note that you can also add a Chrome or Firefox extension for <https://www.webaccessibility.com>, making it more straightforward to run your accessibility tests.
 It also comes with tools for Java and JavaScript, and notably with a NodeJS module, so it can be used programmatically, for example, in your Continuous Integration suite.
