--- a/08-step-by-step-prototype.Rmd
+++ b/08-step-by-step-prototype.Rmd
@@ -56,9 +56,26 @@ try({
 
 ```
 
-```{r 08-step-by-step-prototype-3, comment=""}
+```{r 08-step-by-step-prototype-3, comment="", eval = FALSE}
 # This is what a default {golem} project looks like
+# Listing the files from the `golex` project using {fs}
 fs::dir_tree("golex")
+```
+
+```{r include = FALSE}
+fs::dir_delete("golex")
+golem::create_golem("golex", open = FALSE)
+```
+
+
+```{r echo = FALSE}
+fs::dir_tree("golex")
+
+```
+
+```{r include = FALSE}
+fs::dir_delete("golex")
+source("golembuild.R")
 ```
 
 If you already have some experience with R packages, most of these files will appear very familiar to you.
