--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -103,33 +103,31 @@ remotes::install_github("Thinkr-open/shinipsum")
 
 This package includes a series of functions that generates random placeholders.
 For example, `random_ggplot()` generates random `{ggplot2}` [@R-ggplot2] elements.
-If we run this code two times, we should get different results, as seen on Figure \@ref(fig:09-prototyping-4) and Figure \@ref(fig:09-prototyping-5).[^prototyping-1]
+If we run this code two times, we should get different results, as seen on Figure \@ref(fig:09-prototyping-5) and Figure \@ref(fig:09-prototyping-6).[^prototyping-1]
 
 [^prototyping-1]: Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
 
-```{r 09-prototyping-4 }
+```{r 09-prototyping-4}
 library(shinipsum)
 library(ggplot2)
 ```
 
 (ref:randomplot1) A random plot.
 
-```{r 09-prototyping-5, fig.cap="(ref:randomplot1)", out.width="100%"}
+```{r 09-prototyping-5, fig.cap="(ref:randomplot1)", out.width="100%", warning  = FALSE}
 random_ggplot() + 
   labs(title = "Random plot") 
 ```
 
 (ref:randomplot2) Another random plot.
 
-```{r 09-prototyping-6, fig.cap="(ref:randomplot2)", out.width="100%"}
+```{r 09-prototyping-6, fig.cap="(ref:randomplot2)", out.width="100%", warning  = FALSE}
 random_ggplot() + 
   labs(title = "Random plot") 
 ```
 
 Of course, the idea is to combine this with a `{shiny}` interface, for example, `random_ggplot()` will be used with a `renderPlot()` and `plotOutput()`.
 And as we want to prototype but still be close to what the app might look like, these functions take arguments that can shape the output: for example, `random_ggplot()` has a `type` parameter that can help you select a specific `{ggplot2}` geom.
-
-Figure \@ref(fig:09-prototyping-8) is a screenshot of this application.
 
 
 ```{r 09-prototyping-7, eval = FALSE}
@@ -158,6 +156,9 @@ server <- function(input, output, session) {
 }
 shinyApp(ui, server)
 ```
+
+Figure \@ref(fig:09-prototyping-8) is a screenshot of this application.
+
 
 (ref:shinipsum) An app built with `{shinipsum}`.
 
