--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -552,21 +552,21 @@ For example, compare the size of this file from `{shiny}`:
 ```{r 14-when-optimize-24, eval = FALSE}
 # Displaying the file size of a CSS file from {shiny}
 fs::file_size(
-  system.file("www/shared/shiny.css", package = "shiny")
+  system.file("www/shared/shiny.js", package = "shiny")
 ) 
 ```
 
 ```{r 14-when-optimize-25, echo = FALSE}
-cat("8.4K")
+cat("239K")
 ```
 
 To its minified version:
 
 ```{r 14-when-optimize-26, eval = FALSE}
 # Using the {minifyr} package to minify the CSS file
-minified <- minifyr::minifyr_css_cleancss(
-  system.file("www/shared/shiny.css", package = "shiny"), 
-  "shinyminified.css"
+minified <- minifyr::minifyr_js_gcc(
+  system.file("www/shared/shiny.js", package = "shiny"), 
+  "shinymini.js"
 ) 
 ```
 
@@ -576,7 +576,7 @@ fs::file_size(minified)
 ```
 
 ```{r 14-when-optimize-28, echo = FALSE }
-cat("5.91K")
+cat("87.5K")
 ```
 
 That might not seem like much (a couple of KB) on a small scale, but as it can be done automatically, why not leverage these small performance gains when building larger applications?
