--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -11,6 +11,7 @@ img.left {
 <img src="img/thinkr-hex-golem2.png" class="left" width="20%"/>
 
 ```{r 04-golem-1, include = FALSE}
+library(golem)
 knitr::opts_chunk$set(comment = "")
 ```
 
@@ -81,10 +82,29 @@ golem::create_golem("golex")
 
 The project will start with this specific architecture:
 
-```{r 04-golem-8 }
+```{r 04-golem-8, eval = FALSE}
 # Listing the files from the `golex` project using {fs}
 fs::dir_tree("golex")
 ```
+
+
+```{r include = FALSE}
+fs::dir_delete("golex")
+golem::create_golem("golex", open = FALSE)
+```
+
+
+```{r echo = FALSE}
+fs::dir_tree("golex")
+
+```
+
+```{r include = FALSE}
+fs::dir_delete("golex")
+source("golembuild.R")
+```
+
+
 
 If you are familiar with building R packages, this structure will look familiar to you.
 And for a good reason: a `{golem}` app IS a package.
@@ -369,29 +389,91 @@ These options are globally set with:
 set_golem_options()
 ```
 
+```
+── Setting {golem} options in `golem-config.yml` ──────
+✓ Setting `golem_wd` to /Users/colin/golex
+You can change golem working directory with 
+set_golem_wd('path/to/wd')
+✓ Setting `golem_name` to golex
+✓ Setting `golem_version` to 0.0.0.9000
+✓ Setting `app_prod` to FALSE
+── Setting {usethis} project as `golem_wd` ────────────
+```
+
 The functions reading the options in this config file are:
 
 ```{r 04-golem-17, eval = FALSE}
 # Get the values from the config file
 get_golem_name()
+```
+
+```
+[1] "golex"
+```
+
+
+```{r, eval = FALSE}
 get_golem_wd()
+```
+
+```
+[1] "/Users/colin/golex"
+```
+
+
+```{r, eval = FALSE}
 get_golem_version()
 ```
+
+```
+[1] "0.0.0.9000"
+```
+
 
 You can set these with:
 
 ```{r 04-golem-18, eval = FALSE}
 # Get the values in the config file
 set_golem_name("this")
-set_golem_wd(".")
+```
+
+```
+✓ Setting `golem_name` to this
+```
+
+```{r, eval = FALSE}
 set_golem_version("0.0.1")
 ```
+
+```
+✓ Setting `golem_version` to 0.0.1
+```
+
+
+```{r, eval = FALSE}
+# Get the values from the config file
+get_golem_name()
+```
+
+```
+[1] "this"
+```
+
+
+```{r, eval = FALSE}
+get_golem_version()
+```
+
+```
+[1] "0.0.1"
+```
+
 
 If you are already familiar with the `{config}` package, you can use this file just as any config file.
 
 `{golem}` comes with an `amend_golem_config()` function to add elements to it.
 
-```{r 04-golem-19, eval=FALSE}
+```{r 04-golem-19, eval = FALSE}
 # Add a key in the default configuration
 amend_golem_config(
   key = "MONGODBURL", 
@@ -412,17 +494,35 @@ In `R/app_config.R`, you will find a `get_golem_config()` function that allows y
 get_golem_config(
   "MONGODBURL"
 )
+```
+
+```
+[1] "localhost"
+```
+
+
+```{r, eval = FALSE}
 get_golem_config(
   "MONGODBURL", 
   config = "production"
 )
 ```
 
+```
+[1] "0.0.0.0"
+```
+
 You can also use an environment variable (default `{config}` behavior):
 
-```{r 04-golem-21, eval=FALSE}
+```{r 04-golem-21, eval = FALSE}
 Sys.setenv("GOLEM_CONFIG_ACTIVE" = "production")
-get_golem_config("MONGODBURL")
+get_golem_config(
+  "MONGODBURL"
+)
+```
+
+```
+[1] "0.0.0.0"
 ```
 
 The good news is that if you don't want/need to use `{config}`, you can safely ignore this file, just leave it where it is: it is used internally by the `{golem}` functions.
