--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -91,7 +91,7 @@ Splitting a `{shiny}` project is made possible by following two methods:
 -   **Split your app into `{shiny}` modules**, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.
 
 Figure \@ref(fig:02-planning-ahead-1) is, for example, a representation of a `{shiny}` application with modules and sub-modules.
-You will not be able to decipher the text inside the node, but the idea is to give you a sense of how a `{shiny}` application with modulse can be organized and split into smaller pieces that are all related to each other in a tree form.
+You will not be able to decipher the text inside the node, but the idea is to give you a sense of how a `{shiny}` application with modules can be organized and split into smaller pieces that are all related to each other in a tree form.
 
 (ref:apptreecap) Representation of a `{shiny}` application with its modules and sub-modules.
 
