New look with bs4_book

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -445,7 +445,7 @@ This package can now be used to assess the dependencies we use in our applicatio
 To do that, let's create a small function that computes this metric and returns a tibble:
 
 ```{r 01-big-shiny-25 }
-library()
+library(packageMetrics2)
 # A function to turn the output of the metrics into a data.frame
 frame_metric <- function(pkg){
   metrics <- package_metrics(pkg)
