--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -50,8 +50,8 @@ First of all, users rarely carefully read all the instructions: they **scan** an
 Navigating the web, users try to optimize their decision, not by making the decision that would be "optimal", but by doing the first action that is sufficiently satisfactory in relevance.
 They behave like that for a lot of reasons, but notably because they want to be as quick as possible on the web, and because the cost of being wrong is very low most of the time - even if you make the wrong decision on a website, chances are that you are just a "return" or "cancel" button away from canceling your last action.
 
-(ref:scanningcap) How we design a web page versus how a user will really scan it.
-From [@stevekrug2014].
+(ref:scanningcap) How we design a web page versus how a user will really scan it. From [@stevekrug2014].
+
 
 ```{r 06-ux-matters-1, echo=FALSE, fig.cap="(ref:scanningcap)", out.width="100%"}
 knitr::include_graphics("img/scanning.png")
