--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -597,9 +597,11 @@ Here is what it can look like inside a `Dockerfile` (Note that you will need to 
 
     FROM rocker/shiny-verse:3.6.3
 
-    RUN apt-get -y install curl RUN curl -sL \
+    RUN apt-get -y install curl 
+    RUN curl -sL \
       <https://deb.nodesource.com/setup_14.x> \
-      | bash - RUN apt-get install -y nodejs
+      | bash - 
+    RUN apt-get install -y nodejs
 
     RUN Rscript -e 'remotes::install_github("colinfay/minifyr")' 
     RUN Rscript -e 'remotes::install_cran("cicerone")' 
