--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Engineering Production-Grade Shiny Apps"
-author: "Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard"
+author: ["Colin Fay", "Sébastien Rochette", "Vincent Guyader", "Cervan Girard"]
 date: "`r Sys.Date()`"
 documentclass: krantz
 lof: yes
@@ -13,7 +13,7 @@ colorlinks: yes
 site: bookdown::bookdown_site
 description: "A book about engineering shiny application that will later be sent to production. This book cover project management, structuring your project, building a solid testing suite, and optimizing your codebase. We describe in this book a specific workflow: design, prototype, build, strengthen and deploy."
 favicon: img/favicon.ico
-github-repo: ThinkR-open/building-shiny-apps-workflow
+github-repo: ThinkR-open/engineering-shiny-book
 graphics: yes
 nocite: '@*'
 cover-image: https://raw.githubusercontent.com/ThinkR-open/engineering-shiny-book/master/img/engineering-shiny.jpg
@@ -59,14 +59,8 @@ options(width = 55)
 
 # Introduction {-}
 
-<style>
-img.left {
-float: left;
-margin-right: 1em;
-}
-</style>
+<img src="img/engineering-shiny.jpg" width="300" align="right" alt="" class="cover" /> Welcome to "Engineering Production-Grade Shiny Apps" by [Colin Fay](https://colinfay.me/), [Sébastien Rochette](statnmap.com), [Vincent Guyader](https://rtask.thinkr.fr/consultants-r-experts/vincent-guyader/) and [Cervan Girard](https://rtask.thinkr.fr/consultants-r-experts/cervan-girard).
 
-<img src="img/engineering-shiny.jpg" class = "left" width = "300px">
 
 `r if (knitr::is_html_output()) '
 This book will soon be available in print, published in the [R Series](https://www.crcpress.com/go/the-r-series) by Chapman & Hall.
@@ -225,7 +219,7 @@ means that the package will be installed from GitHub, and that you can use the `
 ## Want to help? {-}
 
 Any feedback on the book is very welcome. 
-Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a Pull Request if you spot a typo.
+Feel free to [open an issue](https://github.com/ThinkR-open/engineering-shiny-book/issues), or to make a Pull Request if you spot a typo.
 
 
 ## Other resources {-}
@@ -247,7 +241,7 @@ You can also find more resources in the bibliography.
 + [Shiny in production: Principles, practices, and tools](https://resources.rstudio.com/rstudio-conf-2019/shiny-in-production-principles-practices-and-tools-joe-cheng)
 + [Shiny in Production](https://kellobri.github.io/shiny-prod-book/)
 
-Feel free to [suggest a resource](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues)!
+Feel free to [suggest a resource](https://github.com/ThinkR-open/engineering-shiny-book/issues)!
 
 ## Acknowledgments {-}
 
