--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -346,8 +346,7 @@ While developing your application, the one you will be interested in is `cycloco
 Here is, for example, the cyclomatic complexity of the default golem template (assuming it is located in a `golex/` subdirectory):
 
 ```{r 01-big-shiny-13, include = FALSE}
-# Assume dependencies already installed to avoid GitHub rate limit
-remotes::install_local("golex", upgrade = "never", dependencies = FALSE)
+remotes::install_local("golex", upgrade = "never")
 if (!dir.exists("golex")){
   source("golembuild.R")
 }
