--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -445,7 +445,7 @@ knitr::include_graphics("img/tidytuesdayapp.png")
 
 What should we do?
 Prevent ourselves from implementing "full reactivity": instead, we will add a user input that will launch the computation.
-The simplest solution iss a button so that the user signals to the application that now they are ready for the application to compute what they have parameterized.
+The simplest solution is a button so that the user signals to the application that now they are ready for the application to compute what they have parameterized.
 
 ### Too much interactivity
 
