Show `packageMetrics2` installation chunk
Currently the instructions on how to install packageMetrics2 is hidden. I've just copied the options for other package installation chunks.

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -436,7 +436,7 @@ if (!requireNamespace("packageMetrics2")) {
 
 At the time of writing these lines, the package is not on CRAN and can be installed using the following line of code:
 
-```{r 01-big-shiny-24, echo = FALSE, include = FALSE}
+```{r 01-big-shiny-24, eval = FALSE}
 # Installing {packageMetrics2} from GitHub
 remotes::install_github("MangoTheCat/packageMetrics2")
 ```
