--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -420,7 +420,7 @@ But that is just at a local level, and it can be a suboptimal option: having a v
 In the end of the day, splitting into smaller functions is not a magic solution because:
 
 -  the global complexity of the app is not lowered by splitting things into pieces (just local complexity) and
--  tThe deeper the call stack, the harder it can be to debug.
+-  The deeper the call stack, the harder it can be to debug.
 
 #### C. Other measures for code complexity {.unnumbered}
 
