--- a/index.Rmd
+++ b/index.Rmd
@@ -63,7 +63,9 @@ options(width = 55)
 
 
 `r if (knitr::is_html_output()) '
-This book will soon be available in print, published in the [R Series](https://www.crcpress.com/go/the-r-series) by Chapman & Hall.
+This book is available in print, published in the [R Series](https://www.crcpress.com/go/the-r-series) by Chapman and Hall/CRC.
+
+You can grab a copy on [routledge.com](https://www.routledge.com/Engineering-Production-Grade-Shiny-Apps/Fay-Rochette-Guyader-Girard/p/book/9780367466022).
 
 The online version of this book is free to read here (thanks to Chapman & Hall/CRC), and licensed under the [Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License](https://creativecommons.org/licenses/by-nc-sa/4.0/).
 '`
