--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -198,7 +198,7 @@ What is the difference between the two?
 
 -   self-evident: "Not needing to be demonstrated or explained; obvious." [lexico.com](https://www.lexico.com/en/definition/self_evident)
 
--   self-explanatory: "Easily understood; not needing explanation." <https://www.lexico.com/en/definition/self_explanatory>
+-   self-explanatory: "Easily understood; not needing explanation." [lexico.com](https://www.lexico.com/en/definition/self_explanatory)
 
 The first is that the app is designed in such a way that there is no learning curve to using it.
 A self-explanatory app has a small learning curve, but it is designed in a way that will make the user understand it in a matter of seconds.
