--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -392,7 +392,7 @@ shinyApp(ui, server)
 Here, as a user, it is way easier to understand what went wrong: we have moved from a red error `Error: need finite 'xlim' values` to a pop-up explaining what went wrong in the way the user configured the app.
 Perfect way to reduce your bug tracker incoming tickets!
 
-This is a way to do it natively in `{shiny}`, but note that you can also use the `{shinyAlert}` package to implement alerts.
+This is a way to do it natively in `{shiny}`, but note that you can also use the `{shinyalert}` package to implement alerts.
 It is also possible to build your own with a little bit of HTML, CSS and JavaScript, as shown in [the `notifyjsexample` repository](https://github.com/ColinFay/notifyjsexample).
 
 ## The danger of feature-creep
