--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -859,7 +859,7 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 The first thing to do with `{renv}` is initiate it with the `init()` function.
 
 ```{r 11-step-by-step-secure-45, eval = FALSE}
-# Loading and initiaing {renv}
+# Loading and initiating {renv}
 library(renv)
 init()
 ```
