--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -116,7 +116,7 @@ And developing for mobiles requires a different kind of mindset.[^step-by-step-d
 [^step-by-step-design-3]: For developing an app that is mobile first, you can have a look at the great `{shinyMobile}` [@R-shinyMobile] package made by the amazing Rinterface (<https://rinterface.com/>) team.
 
 Another good reason why talking to the users is an important step, is that most of the time, **people writing specifications are not the end users and will either request too many features or not enough**.
-Do the users really need that much interactive plots?
+Do the users really need that many interactive plots?
 Do they actually need that much granularity in the information?
 Will they really see a `datatable` of 15k lines?
 Do they really care about being able to zoom in the `dygraph` so that they can see the point at a minute scale?
